dsl2/src/test/resources/parsing/invalid/bad_type/bad_reassignment.uss
string a = "string";
a = 2;